# NSG

./: .gitignore  CMakeLists.txt  OpenMP.md  README.md  main.c
.github/workflows/: cmake.yml  cppcheck.yml
data/: options.json
src/: AbstractBoundaryCondidtion.hpp  AbstractBoundaryCondition.cpp  AbstractBoundaryCondition.hpp  AbstractPrinter.hpp  CSVPrinter.cpp  CSVPrinter.hpp  CavityFlowBoundaryCondition.cpp  CavityFlowBoundaryCondition.hpp  Common.hpp  Options.cpp  Options.hpp  SOR.cpp  SOR.hpp  State.cpp  State.hpp  Stencils.cpp  Stencils.hpp  TestFunc.hpp  TimeStepper.cpp  TimeStepper.hpp  main.cpp
tools/: convergence_test.py  plot.py  plot_test.py
